# edgeloop

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  edgeloop.toml  pyproject.toml
docs/: EDGE-DEPLOYMENT.md
docs/plans/: 2026-03-29-edgeloop-rust-plan1-core.md
docs/superpowers/plans/: 2026-03-28-edgeloop-implementation.md  2026-03-30-vllm-backend.md  2026-04-04-multimodal-images.md
docs/superpowers/specs/: 2026-03-28-localclaw-design.md  2026-03-30-vllm-backend-design.md
edgeloop/: __init__.py  agent.py  backend.py  cache.py  cli.py  connection.py  repair.py  tools.py
edgeloop/backends/: __init__.py  llama_server.py  ollama.py  protocol.py
examples/: cloud-openai.toml  custom_backend.py  hello.py  home-automation.toml  local-gemma4.toml  local-vllm.toml  minimal-openwrt.toml  ros2-robot.toml  shared_connection.py
scripts/: bench_speculative.sh
src/: agent.rs  cache.rs  config.rs  lib.rs  main.rs  message.rs  repair.rs  tool.rs
src/backend/: llama_server.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  vllm.rs
src/transport/: cli.rs  mod.rs  mqtt.rs  ros2.rs  socket.rs  websocket.rs
tests/: bench_backends.py  bench_performance.py  benchmark.rs  cache_test.rs  full_test.rs  integration_test.rs  long_chat_test.rs  speculative_bench.rs  test_agent.py  test_backend.py  test_cli.py  test_real_models.py  test_repair.py  test_scenarios.py  test_stress.py  test_tools.py  vllm_integration.rs
tools/filesystem/: tools.toml
tools/system/: tools.toml
