[package]
name = "edgeloop"
version = "0.1.0"
edition = "2021"
description = "Minimal agentic framework for local LLMs"
license = "MIT"

[features]
default = ["ollama", "llama-server", "cli-transport"]
ollama = []
llama-server = []
openai = []
vllm = []
cli-transport = []
websocket = ["dep:tokio-tungstenite"]
mqtt = ["dep:rumqttc"]
unix-socket = []
tcp-socket = []
ros2 = ["dep:ros2-client", "dep:ros2-interfaces-jazzy-serde"]
full = ["ollama", "llama-server", "openai", "vllm", "cli-transport", "websocket", "mqtt", "unix-socket", "tcp-socket", "ros2"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "io-std", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
tokio-stream = "0.1"
async-stream = "0.3"
bytes = "1"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
base64 = "0.22"

tokio-tungstenite = { version = "0.24", optional = true }
rumqttc = { version = "0.24", optional = true }
ros2-client = { version = "0.8", optional = true }
ros2-interfaces-jazzy-serde = { version = "0.0.4", optional = true, features = ["std_msgs"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
