[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgeloop"
version = "0.1.0"
description = "Minimal agentic framework for local LLMs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
edgeloop = "edgeloop.cli:main"
