[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgeloop"
version = "0.1.0"
description = "Minimal agentic framework for local LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["llm", "agent", "local", "edge", "llama.cpp", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
edgeloop = "edgeloop.cli:main"

[project.urls]
Homepage = "https://github.com/parhamdb/edgeloop"
Repository = "https://github.com/parhamdb/edgeloop"
Issues = "https://github.com/parhamdb/edgeloop/issues"
